; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/omnikeyish/extr_dynamic_macro.c_dynamic_macro_save_eeprom.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/omnikeyish/extr_dynamic_macro.c_dynamic_macro_save_eeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DYNAMIC_MACRO_EEPROM_MAGIC_ADDR = common dso_local global i32 0, align 4
@DYNAMIC_MACRO_EEPROM_MAGIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"dynamic macro: writing magic eeprom header\0A\00", align 1
@dynamic_macros = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [40 x i8] c"dynamic macro: slot %d saved to eeprom\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dynamic_macro_save_eeprom(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i32 (...) @dynamic_macro_header_correct()
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @DYNAMIC_MACRO_EEPROM_MAGIC_ADDR, align 4
  %8 = load i32, i32* @DYNAMIC_MACRO_EEPROM_MAGIC, align 4
  %9 = call i32 @eeprom_write_word(i32 %7, i32 %8)
  %10 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %6, %1
  %12 = load i32*, i32** @dynamic_macros, align 8
  %13 = load i64, i64* %2, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  store i32* %14, i32** %3, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load i64, i64* %2, align 8
  %17 = call i32 @dynamic_macro_eeprom_macro_addr(i64 %16)
  %18 = call i32 @eeprom_update_block(i32* %15, i32 %17, i32 4)
  %19 = load i64, i64* %2, align 8
  %20 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i64 %19)
  ret void
}

declare dso_local i32 @dynamic_macro_header_correct(...) #1

declare dso_local i32 @eeprom_write_word(i32, i32) #1

declare dso_local i32 @dprintf(i8*, ...) #1

declare dso_local i32 @eeprom_update_block(i32*, i32, i32) #1

declare dso_local i32 @dynamic_macro_eeprom_macro_addr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
